RESOLVED FIXED287855
[Site Isolation] Fix back/forward isolated frame navigations after session restore
https://bugs.webkit.org/show_bug.cgi?id=287855
Summary [Site Isolation] Fix back/forward isolated frame navigations after session re...
Charlie Wolfe
Reported 2025-02-18 01:47:32 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-18 01:49:13 PST
Charlie Wolfe
Comment 2 2025-02-18 01:50:13 PST
EWS
Comment 3 2025-02-18 13:39:21 PST
Committed 290550@main (f748942f84cc): <https://commits.webkit.org/290550@main> Reviewed commits have been landed. Closing PR #40754 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.