[Site Isolation] Fix back/forward isolated frame navigations after session restore https://bugs.webkit.org/show_bug.cgi?id=287855 rdar://145042639

Reviewed by Alex Christensen.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::goToBackForwardItem):
Certain state on WebBackForwardListItem, like isRemoteFrameNavigation(), is not persisted after a session
restore. So, we cannot rely on it to be correct when we use it in this function.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::goToBackForwardItem):
Remove the wasRestoredFromSession() history item check and instead verify that the history item's frame
belongs to the current page (and was not restored from another existing page).

* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::testNavigateIframeBackForward):
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeSameOriginBackForward)):
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeSameOriginBackForwardAfterSessionRestore)):
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeCrossOriginBackForward)):
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeCrossOriginBackForwardAfterSessionRestore)):

Canonical link: https://commits.webkit.org/290550@main